Learn/Day08/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-day08
  labels:
    environment: learning
    day: "08"
