Learn/Day08/manifests/deployment-no-toleration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-toleration
  namespace: k8s-day08
  labels:
    app: no-toleration
    day: "08"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: no-toleration
  template:
    metadata:
      labels:
        app: no-toleration
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
